--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -17,4 +17,4 @@ RUN pip install -r requirements.txt
 COPY . /code/
 
 # Command to run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
